# chat

./: .env  Cargo.toml  _typos.toml  cliff.toml  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/fixtures/: encoding.pem
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yml  chat.yml
chat_server/fixtures/: decoding.pem
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  notify.yml
chat_test/tests/: chat.rs
migrations/: 20240618012725_initial.sql  20240625100626_workspace.sql  20240629111243_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notify.rs  sse.rs
src/: config.rs  lib.rs  main.rs
src/handlers/: chat.rs  messages.rs
