[workspace]
members = ["chat_server", "chat_core", "notify_server"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = [
    "http2",
    "query",
    "tracing",
    "multipart",
] }
chrono = { version = "0.4.38", features = ["serde"] }
chat-core = { path = "./chat_core" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
jwt-simple = { version = "0.12.9" }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "rt"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "fs",
    "trace",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
