[package]
name = "chat-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing.workspace = true
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
axum-extra = { workspace = true }
jwt-simple = { workspace = true }
