[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt-simple = { version = "0.12.9" }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0.117"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "fs",
    "trace",
] }
uuid = { version = "1.8.0", features = ["v7", "serde"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"

[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.1"
