[package]
name = "chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
jwt-simple = { workspace = true }
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0.117"
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
axum-extra = { workspace = true }
sha1 = "0.10.6"
hex = "0.4.3"
mime_guess = "2.0.4"
chat-core = { workspace = true }

[dev-dependencies]
sqlx-db-tester = "0.4.2"
http-body-util = "0.1.1"
