[package]
name = "chat_test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    "json",
    "stream",
    "multipart",
] }
chat-core = { workspace = true }
chat_server = { workspace = true, features = ["test-util"] }
notify-server = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.119"
reqwest-eventsource = "0.6.0"
futures = "0.3.30"

[dependencies]
